objects/InUseRoster__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>OAE</description>
    <fields>
        <fullName>Bitz__c</fullName>
        <label>Bitz</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultQueue__c</fullName>
        <label>DefaultQueue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeField__c</fullName>
        <label>TimeField</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UD_WorkloadField__c</fullName>
        <label>UD_WorkloadField</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkloadIncrementField__c</fullName>
        <label>WorkloadIncrementField</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skedRecTypeID__c</fullName>
        <label>skedRecTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>InUseRoster</label>
</CustomObject>